--- a/src/Frontend/FecaPass/app/src/main/res/values/strings.xml
+++ b/src/Frontend/FecaPass/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="app_name">FecapassJava</string>
     <string name="data_evento">04 abr - 2025 · 23:00 > 07:00</string>
     <string name="local_evento">Quadra Rosas de Ouro, São Paulo - Barra Funda</string>
     <string name="titulo_descricao">Descrição do evento</string>
